--- a/theme/theme.css
+++ b/theme/theme.css
@@ -32,6 +32,10 @@ sup {
   font-variant-caps: small-caps;
 }
 
+.chapter li {
+  color: inherit;
+}
+
 .chapter li a.active, .chapter li a:hover {
 	color: var(--links);
 }
@@ -45,6 +49,10 @@ sup {
   font-weight: bold;
   font-size: 200%;
   font-variant-caps: small-caps;
+}
+
+.chapter > li > ol > li {
+  font-size: 110%;
 }
 
 td>ol,
